--- a/packages/frontend/index.html
+++ b/packages/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <title>Ernest - Amsterdam House Hunting</title>
+    <title>ernest</title>
   </head>
   <body>
     <div id="app"></div>
